--- a/XamlTemplateSelector/XamlTemplateSelector.csproj
+++ b/XamlTemplateSelector/XamlTemplateSelector.csproj
@@ -120,9 +120,10 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="DataTemplateEntry.cs" />
+    <Compile Include="DataTemplateCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XamlTemplateSelector.cs" />
+    <Compile Include="XamlTypeHelper.cs" />
     <EmbeddedResource Include="Properties\XamlTemplateSelector.rd.xml" />
   </ItemGroup>
   <ItemGroup>
